# numba-nnls

./: .gitignore  README.md  meson.build  pyproject.toml
.github/workflows/: python-package-conda.yml  python-package.yml
nnls_numba/: __init__.py  _dsysv.py  _nnls.py  scipy_overloads.py  utils.py
numba_nnls/: __init__.py  _dsysv.py  _nnls.py  meson.build  scipy_overloads.py  utils.py
src/: nnls.f  nnls_capi.f90
tests/: test_nnls_007_111.py  test_nnls_112_114.py  test_nnls_new.py  test_nnls_old.py
