[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[project]
name = 'numba-nnls'
version = '0.1.0'
description = 'Numba compatible implementations of scipy.optimize.nnls.'
readme = 'README.md'
license = {file = 'LICENSE'}
authors = [{name = 'Chris Ninham', email = 'christopher.ninham@creatis.insa-lyon.fr'},]
dependencies = ["numba", "numpy"]

[project.urls]
"Homepage" = "https://github.com/Nin17/numba-nnls"
"Bug Tracker" = "https://github.com/Nin17/numba-nnls/issues"

[project.optional-dependencies]
dev = ['pytest', 'pytest-env', 'ruff', 'scipy']


[project.entry-points.numba_extensions]
init = "numba_nnls:_init"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.pytest_env]
NUMBA_CAPTURED_ERRORS='new_style'
